gitignore for results folders; reordered channel axis and removed clear boarders

--- a/Cell_Segmentation_Measurements.ipynb
+++ b/Cell_Segmentation_Measurements.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "92c2108a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 26,
    "id": "ee1bc750",
    "metadata": {},
    "outputs": [],
@@ -28,9 +28,10 @@
     "def read_and_prep_images(czifile):\n",
     "    scenes = [czifile.read_image(S=s)[0] for s in range(czifile.size[2])]\n",
     "    squeezed = [np.squeeze(i) for i in scenes]\n",
-    "    nuclei_channel = [squeezed[i][-1,...] for i in range(len(squeezed))]\n",
+    "    reorder = [np.moveaxis(i,0,-1) for i in squeezed] #channel axis needs to be placed last for scikit-image\n",
+    "    nuclei_channel = [reorder[i][...,-1] for i in range(len(reorder))]\n",
     "    gauss_nuc = [sk.filters.gaussian(img, sigma=3) for img in nuclei_channel]\n",
-    "    return scenes, squeezed, gauss_nuc, nuclei_channel        \n"
+    "    return scenes, reorder, gauss_nuc, nuclei_channel        \n"
    ]
   },
   {
@@ -40,19 +41,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def segment_and_measure_CP(squeezed, gauss_nuc, props):\n",
-    "    model = models.Cellpose(gpu=True,model_type='nuclei') # model_type='cyto' or 'nuclei' or 'cyto2' or 'cyto3'\n",
-    "    channels =[[0,0]]\n",
-    "    masks, _, _, _ = model.eval(gauss_nuc, diameter=150, channels=channels, z_axis=0,stitch_threshold=0.1,flow_threshold=0.4,cellprob_threshold=0.0, min_size=100)\n",
-    "    filtered_masks = [sk.segmentation.clear_border(mask) for mask in masks]\n",
-    "    df = [sk.measure.regionprops_table(filtered_masks[i],squeezed[i],properties=props) for i in range(len(filtered_masks))]\n",
-    "    df = [pd.DataFrame.from_dict(d) for d in df]\n",
-    "    return filtered_masks, df"
+    "def segment_and_measure_CP(reorder, gauss_nuc, props, save_path, img_name):\n",
+    "    for i in range(len(gauss_nuc)):\n",
+    "        model = models.Cellpose(gpu=True,model_type='nuclei') # model_type='cyto' or 'nuclei' or 'cyto2' or 'cyto3'\n",
+    "        channels =[[0,0]]\n",
+    "        masks, _, _, _ = model.eval(gauss_nuc[i], diameter=150, channels=channels, z_axis=0,stitch_threshold=0.1,flow_threshold=0.4,cellprob_threshold=0.0, min_size=100)\n",
+    "        # filtered_masks = sk.segmentation.clear_border(masks) #nuclei span the whole image in Z and are removed even if they are complete objects\n",
+    "        df = sk.measure.regionprops_table(masks,reorder[i],properties=props)\n",
+    "        df = pd.DataFrame.from_dict(df)\n",
+    "        #Save Everything\n",
+    "        dataframe_path = os.path.join(save_path,'measurements')\n",
+    "        df.to_csv(os.path.join(dataframe_path,'measurements_'+img_name[:-4]+'_scene0'+str(i+1)+'.csv'))\n",
+    "        masks_path = os.path.join(save_path,'masks')\n",
+    "        sk.io.imsave(os.path.join(masks_path,'filtered_masks_'+img_name[:-4]+'_scene0'+str(i+1)+'.tif'),masks,check_contrast=False)\n",
+    "        scenes_path = os.path.join(save_path,'scenes')\n",
+    "        sk.io.imsave(os.path.join(scenes_path, img_name[:-4]+'_scene0'+str(i+1)+'.tif'),reorder[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c9ba059f",
    "metadata": {},
    "outputs": [],
@@ -78,19 +86,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 29,
    "id": "afa20503",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 23/23 [00:00<00:00, 118.57it/s]\n",
+      "100%|██████████| 23/23 [00:00<00:00, 128.36it/s]\n",
+      "100%|██████████| 23/23 [00:00<00:00, 120.26it/s]\n",
+      "c:\\ProgramData\\anaconda3\\envs\\CellPoseCLE-env\\lib\\site-packages\\skimage\\_shared\\utils.py:328: UserWarning: E:/Fondufe-Mittendorf_Lab/OIC-150_SATB2-GFP_circ3915-3XFLAG_Fluorescence_Quantification/scenes\\Slide1-unstained_2025_05_05__15_40_55_Airyscan Processing_scene03.tif is a low contrast image\n",
+      "  return func(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "file_paths = sorted(glob(\"E:\\Fondufe-Mittendorf_Lab\\OIC-150_Images\\*.czi\"))\n",
     "czi_files = list(map(CziFile,file_paths))\n",
-    "scenes, squeezed, gauss_nuc, nuclei_channel = read_and_prep_images(czifile=czi_files[0])"
+    "save_path = \"E:/Fondufe-Mittendorf_Lab/OIC-150_SATB2-GFP_circ3915-3XFLAG_Fluorescence_Quantification/\"\n",
+    "img_name = os.path.basename(file_paths[0])\n",
+    "\n",
+    "scenes, reorder, gauss_nuc, nuclei_channel = read_and_prep_images(czifile=czi_files[0])\n",
+    "props = ('label', 'intensity_mean')\n",
+    "segment_and_measure_CP(reorder, gauss_nuc, props,save_path,img_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 22,
+   "id": "cc2f08bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(24, 1012, 1012, 4)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reorder[0].shape\n",
+    "#sk.io.imsave(os.path.join(save_path, 'scenes','test.tif'),squeezed[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "87f9dcb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\anaconda3\\envs\\CellPoseCLE-env\\lib\\site-packages\\skimage\\_shared\\utils.py:328: UserWarning: E:/Fondufe-Mittendorf_Lab/OIC-150_SATB2-GFP_circ3915-3XFLAG_Fluorescence_Quantification/scenes\\normalized_Slide1-unstained_2025_05_05__15_40_55_Airyscan Processing_scene2.tif is a low contrast image\n",
+      "  return func(*args, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_path = \"E:/Fondufe-Mittendorf_Lab/OIC-150_SATB2-GFP_circ3915-3XFLAG_Fluorescence_Quantification/\"\n",
+    "img_name = os.path.basename(file_paths[0])\n",
+    "save(save_path,img_name,squeezed,gauss_nuc,filtered_masks,df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "f5795511",
    "metadata": {},
    "outputs": [
@@ -100,7 +168,7 @@
        "(24, 1012, 1012)"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "id": "4dce4a5e",
    "metadata": {},
    "outputs": [],
@@ -122,28 +190,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "id": "b871b120",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 192,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "czi_files[0].size[2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "id": "27f648c6",
    "metadata": {},
    "outputs": [],
@@ -154,39 +211,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "id": "e2018298",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 24, 1012, 1012)"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "squeezed[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": null,
    "id": "09414d7b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3, 4, 27, 1012, 1012)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = np.squeeze(img)\n",
     "print(img.shape)\n",
@@ -195,21 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "id": "293a72d1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 27, 1012, 1012)"
-      ]
-     },
-     "execution_count": 159,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "squeeze = np.squeeze(split)\n",
     "squeeze[0].shape"
@@ -217,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "fd9d15c2",
    "metadata": {},
    "outputs": [],
@@ -227,55 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "92856326",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "creating new log file\n",
-      "2025-06-20 12:38:49,808 [INFO] WRITING LOG OUTPUT TO C:\\Users\\kristin.gallik\\.cellpose\\run.log\n",
-      "2025-06-20 12:38:49,808 [INFO] \n",
-      "cellpose version: \t3.1.1.2 \n",
-      "platform:       \twin32 \n",
-      "python version: \t3.10.16 \n",
-      "torch version:  \t2.7.0+cu118\n",
-      "2025-06-20 12:38:49,808 [INFO] ** TORCH CUDA version installed and working. **\n",
-      "2025-06-20 12:38:49,817 [INFO] >>>> using GPU (CUDA)\n",
-      "2025-06-20 12:38:49,819 [INFO] >> nuclei << model set to be used\n",
-      "2025-06-20 12:38:49,921 [INFO] >>>> loading model C:\\Users\\kristin.gallik\\.cellpose\\models\\nucleitorch_0\n",
-      "2025-06-20 12:38:50,050 [INFO] >>>> model diam_mean =  17.000 (ROIs rescaled to this size during training)\n",
-      "2025-06-20 12:38:50,054 [INFO] channels set to [[0, 0]]\n",
-      "2025-06-20 12:38:50,055 [INFO] ~~~ FINDING MASKS ~~~\n",
-      "2025-06-20 12:38:50,055 [INFO] multi-stack tiff read in as having 27 planes 1 channels\n",
-      "2025-06-20 12:38:50,385 [INFO] 0%|          | 0/4 [00:00<?, ?it/s]\n",
-      "2025-06-20 12:38:50,485 [INFO] 100%|##########| 4/4 [00:00<00:00, 40.00it/s]\n",
-      "2025-06-20 12:38:50,690 [INFO] network run in 0.30s\n",
-      "2025-06-20 12:38:50,690 [INFO] 0%|          | 0/27 [00:00<?, ?it/s]\n",
-      "2025-06-20 12:38:50,690 [INFO] No cell pixels found.\n",
-      "2025-06-20 12:38:50,702 [INFO] No cell pixels found.\n",
-      "2025-06-20 12:39:09,184 [INFO] 100%|##########| 27/27 [00:18<00:00,  1.46it/s]\n",
-      "2025-06-20 12:39:09,191 [INFO] stitching 27 planes using stitch_threshold=0.100 to make 3D masks\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26/26 [00:00<00:00, 152.95it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2025-06-20 12:39:09,788 [INFO] masks created in 19.10s\n",
-      "2025-06-20 12:39:11,973 [INFO] >>>> TOTAL TIME 21.92 sec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "io.logger_setup()\n",
     "model = models.Cellpose(gpu=True,model_type='nuclei') # model_type='cyto' or 'nuclei' or 'cyto2' or 'cyto3'\n",
@@ -285,21 +267,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "9d3a87c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Labels layer 'masks' at 0x16e5464b700>"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "voxel = [0.25,0.13,0.13]\n",
     "viewer = napari.view_image(gauss, scale=voxel)\n",
