Added notes on running the pipeline

--- a/Cell_Segmentation_Measurements.ipynb
+++ b/Cell_Segmentation_Measurements.ipynb
@@ -80,6 +80,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "82590491",
+   "metadata": {},
+   "source": [
+    "## Running the pipeline\n",
+    "\n",
+    "Need to give the functions the location of the flies and save directory, and read in the images with `CziFile`. Then process all images through the above functions with a for loop. Within the loop, use `os.path.basename` to get the file name for saving the outputs and also provide the properties to measure with `sk.measure.regionprops_table`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "afa20503",
